--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "axios": "^1.7.2",
     "mongoose": "^8.5.1",
     "next": "14.2.4",
     "react": "^18",
